# entrees

./: .gitignore
.github/: backend.yaml
.github/workflows/: backend.yaml
Backend/: .dockerignore  Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  pyproject.toml
Backend/app/: config.py  main.py
Backend/app/db/: __init__.py
Backend/services/: Dockerfile.traefik  traefik.prod.toml
Backend/tests/: conftest.py
