[tool.poetry]
name = "api"
version = "0.1.0"
description = "api"
authors = ["Sebastian Ozimkowski sebastianozimkowski@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
httpx = "^0.22.0"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
databases = "^0.5.5"
alembic = "^1.7.7"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
